add popup to enable/disable

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,7 @@
     }
   ],
   "action": {
-    "default_icon": "hsth_icon.png"
+    "default_icon": "hsth_icon.png",
+    "default_popup": "popup.html"
   }
 }
